# challenge-data

./: README.md
QRT_(2020)_Stock_Return_Prediction/: qrt-2020.ipynb
qrt-2020-stock-return/: README.md
qrt-2021-liquid-asset/: README.md  pyproject.toml  qrt-2021.ipynb
qrt-2022-learning-factors/: README.md  qrt-2022.ipynb  requirements.yml
